--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ coreschema==0.0.4
 Django==3.0.3
 django-dotenv==1.4.2
 django-extensions==2.2.8
+django-redis==4.11.0
 django-rest-framework==0.1.0
 django-stubs==1.2.0
 djangorestframework==3.11.0
 drf-yasg==1.17.0
 gunicorn==20.0.4
+heroku==0.1.4
 idna==2.8
 inflection==0.3.1
 itypes==1.1.0
@@ -26,7 +28,9 @@ psycopg2-binary==2.8.4
 py==1.8.1
 pyparsing==2.4.6
 pytest==5.3.5
+python-dateutil==1.5
 pytz==2019.3
+redis==3.4.1
 requests==2.22.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
