add cisco template

--- a/templates/initial-scratchings/variableExample.yml
+++ b/templates/initial-scratchings/variableExample.yml
@@ -1,6 +1,7 @@
 ---
 device:
     hostname: AWESOME_HOSTNAME
+    domain: THE_BEST_DOMAIN
     
     users:
         - name: apple
@@ -11,6 +12,9 @@ device:
           password: otherawesomepassword
     
     interfaces:
-        - name: gi-0/0/0/0
+        - name: gi-0/0/0
           ipv4: 10.0.0.1
           ipv6: 10:10:10:10::1
+        - name: gi-0/0/1
+          ipv4: 10.1.0.1
+          ipv6: 10:10:10:20::1
