--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ drf-yasg = "^1.17.0"
 gunicorn = "^20.0.4"
 psycopg2-binary = "^2.8.4"
 django-redis = "^4.11.0"
+whitenoise = "^5.0.0"
 
 [tool.poetry.dev-dependencies]
 django-stubs = "^1.1.0"
