--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ django-redis==4.11.0
 django-rest-framework==0.1.0
 django-stubs==1.2.0
 djangorestframework==3.11.0
-drf-yasg==1.17.0
+drf-yasg==1.17.1
 gunicorn==20.0.4
 heroku==0.1.4
 idna==2.8
@@ -43,4 +43,4 @@ uritemplate==3.0.1
 urllib3==1.22
 uuid==1.30
 wcwidth==0.1.8
-whitenoise
+whitenoise==5.0
